fixed overflow bug

--- a/Pages/style.css
+++ b/Pages/style.css
@@ -59,7 +59,6 @@
 }
 
 .holder{
-	display: table;
 	position: relative;
    	margin-left: auto;
    	margin-right: auto;
@@ -68,12 +67,12 @@
 	height: 95%;
     background-image:url("images\\tile2.png");
 	background-repeat:repeat;
-	overflow: scroll;
+	overflow: auto;
 }
 
 .wrapper{
 	width: 500px;
-	height: 200px;
+	height: 300px;
 	background-color: #f00;
 }
 
